--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
     <link href="index.css rel="stylesheet">
   </head>
   <body>
+  <div class="container">
     <div class="header"></div>
-    <div class="navbar"></div>    
+
+      <div class="meny_container">
+       <div class="navbar"></div> 
+     </div> 
+
     <div class="section"></div>
     <div class="section1"></div>
     <div class="footer"></div>
-
+  </div>
   </body>
   </html>
