--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <div class="section"></div>
       <div class="section1"></div>
-      <div class="footer"></div>
+      <div class="footer">Hello</div>
     </div>
   </body>
 </html>
