--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <div class="container">
       <p>Hej123</p>
       <div class="header"></div>
-
       <div class="navbar">
         <div class="kalender">KALENDER</div>
         <div class="genre">GENRE</div>
@@ -32,7 +31,7 @@
 
       <div class="section"></div>
       <div class="section1"></div>
-      <div class="footer"></div>
+      <div class="footer">Hello</div>
     </div>
   </body>
 </html>
