--- a/index.html
+++ b/index.html
@@ -19,9 +19,22 @@
   </head>
   <body>
     <div class="container">
-      <p>Test123456</p>
-      <div class="header"></div>
+      <div class="header">
+        <div class="logo">
+          <div class="logoimg">
+            <img src="assets/loppe-logo.jpg" alt="loppen logo">
+          </div>
+          <div class="logotext">
+            <div class="loppen">
+              <h1 class="logolopp">LOPPEN</h1>
+            </div>
+            <div class="christiania">
+              <p class="logochris">CHRISTIANIA</p>
+            </div>
+          </div>
+        </div>
 
+      </div>
       <div class="navbar">
         <div class="kalender">KALENDER</div>
         <div class="genre">GENRE</div>
@@ -32,7 +45,7 @@
 
       <div class="section"></div>
       <div class="section1"></div>
-      <div class="footer"></div>
+      <div class="footer">Hello</div>
     </div>
   </body>
 </html>
