--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       crossorigin="anonymous"
     />
     <link href="index.css" rel="stylesheet" />
+    <link href="index.scss" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
-
       <div class="header">
         <div class="logo">
           <div class="logoimg">
-            <img src="assets/loppe-logo.jpg" alt="loppen logo">
+            <img src="assets/loppe-logo.jpg" alt="loppen logo" />
           </div>
           <div class="logotext">
             <div class="loppen">
@@ -34,12 +34,8 @@
             </div>
           </div>
         </div>
-
       </div>
 
-      <p>Test123456</p>
-      <div class="header"></div>
- main
       <div class="navbar">
         <div class="kalender">KALENDER</div>
         <div class="genre">GENRE</div>
@@ -50,7 +46,7 @@
 
       <div class="section"></div>
       <div class="section1"></div>
-      <div class="footer">Hello</div>
+      <div class="footer"></div>
     </div>
   </body>
 </html>
