--- a/index.html
+++ b/index.html
@@ -44,7 +44,16 @@
         <div class="kontakt">KONTAKT</div>
       </div>
 
-      <div class="section"></div>
+      <div class="section">
+        <div class="section_top">
+          <p>ONSDAG 18. SEP 2024 - KL 20.30</p>
+          <p></p>
+        </div>
+        <div class="section_bottom">
+          <h1>GIRL AND GIRL</h1>
+          <h2>SUNRAKER</h2>
+        </div>
+      </div>
       <div class="section1"></div>
       <div class="footer"></div>
     </div>
