--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="section">
         <div class="section_top">
           <p>ONSDAG 18. SEP 2024 - KL 20.30</p>
-          <p></p>
+          <p>FORSALG: 140KR KOB</p>
         </div>
         <div class="section_bottom">
           <h1>GIRL AND GIRL</h1>
