finished header logo

--- a/index.html
+++ b/index.html
@@ -19,22 +19,29 @@
   </head>
   <body>
     <div class="container">
-      <div class="header">
-        <div class="logo">
-          <div class="logoimg">
-            <img src="assets/loppe-logo.jpg" alt="loppen logo">
-          </div>
-          <div class="logotext">
-            <div class="loppen">
-              <h1 class="logolopp">LOPPEN</h1>
-            </div>
-            <div class="christiania">
-              <p class="logochris">CHRISTIANIA</p>
-            </div>
-          </div>
-        </div>
 
+
+      <div class="headerlogo">
+
+        <div class="logo">
+
+          <div class="logoimg">
+            <img src="assets/loppelogonew.svg" alt="loppen logo">
+          </div>
+
+              <div class="logotext">
+                
+                <div class="logolopp">
+                  <h1>LOPPEN</h1>
+                </div>
+                <div class="logochris">
+                  <p>CHRISTIANIA</p>
+                </div>
+          
+              </div>
+        </div>
       </div>
+    </div>
       <div class="navbar">
         <div class="kalender">KALENDER</div>
         <div class="genre">GENRE</div>
