added logos to footer

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
     <link href="index.css" rel="stylesheet" />
     <link href="index.scss" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/9e70829e25.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
@@ -69,7 +70,17 @@
         </div>
       </div>
       <div class="section1"></div>
-      <div class="footer"></div>
+      <div class="footer">
+          <div class="socialmedia">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-brands fa-facebook"></i>
+          </div>
+          <div class="footerlinks">
+            <a href="https://www.christiania.org/">Christiania</a>
+            <a href="https://dansklive.dk/">Dansk Live</a>
+          </div>
+      </div>
     </div>
   </body>
 </html>
