--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
       src="https://kit.fontawesome.com/9e70829e25.js"
       crossorigin="anonymous"
     ></script>
+    <style>
+      @media screen and (max-width: 375px) {
+        div.example {
+          display: none;
+        }
+      }
+      @media screen and (min-width: 376px) {
+        div.example {
+          display: none;
+        }
+      }
+      @media screen and (min-width: 744px) {
+        div.example {
+          display: none;
+        }
+      }
+      @media screen and (min-width: 1100px) {
+        div.example {
+          display: none;
+        }
+      }
+    </style>
   </head>
   <body>
     <div class="container">
