tror det funkar

--- a/index.html
+++ b/index.html
@@ -23,39 +23,85 @@
     ></script>
     <style>
       @media screen and (max-width: 375px) {
-        div.example {
+        div.menu_inside {
           display: none;
         }
-        div.nav {
+        .nav {
           display: none;
           flex-direction: column;
         }
       }
       @media screen and (min-width: 376px) {
-        div.example {
-          display: none;
+        .menu_inside {
+          display: flex;
         }
-        div.nav {
+        .nav {
           display: flex;
           flex-direction: row;
+        }
+        .menu {
+          display: none;
+        }
+        .genre {
+          display: none;
+        }
+        .billeder {
+          display: none;
+        }
+        .info {
+          display: none;
+        }
+        .kontakt {
+          display: none;
         }
       }
       @media screen and (min-width: 744px) {
-        div.example {
-          display: none;
+        .menu_inside {
+          display: flex;
         }
-        div.nav {
+        .nav {
           display: flex;
           flex-direction: row;
+        }
+        .menu {
+          display: none;
+        }
+        .genre {
+          display: none;
+        }
+        .billeder {
+          display: none;
+        }
+        .info {
+          display: none;
+        }
+        .kontakt {
+          display: none;
         }
       }
       @media screen and (min-width: 1100px) {
-        div.example {
+        .menu_inside {
           display: none;
         }
-        div.nav {
+        .nav {
           display: flex;
           flex-direction: row;
+        }
+        .menu {
+          display: none;
+        }
+
+        .genre {
+          display: flex;
+        }
+        .billeder {
+          display: flex;
+        }
+        .info {
+          display: flex;
+        }
+        .kontakt {
+          display: flex;
         }
       }
     </style>
@@ -87,6 +133,7 @@
         <div class="info">INFO</div>
         <div class="kontakt">KONTAKT</div>
         <div class="sog">SOG</div>
+        <div class="menu_inside">Menu<i class="bi bi-list"></i></div>
       </div>
 
       <div class="section">
