added display none to box

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         div.example {
           display: none;
         }
+        .bluebox {
+          display: none;
+        }
       }
       @media screen and (min-width: 376px) {
         div.example {
@@ -49,7 +52,7 @@
       <div class="header">
         <div class="headerlogo">
           <div class="logo">
-            <div class="logoimg">
+            <div class="logoimg" id="loppe">
               <img src="assets/loppelogonew.svg" alt="loppen logo" />
             </div>
             <div class="logotext">
