--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
       <div class="menu">MENU<i class="bi bi-list"></i></div>
       <div class="nav">
-        <div class="kalender">KALENDER</div>
+        <div class="kalender">KALENDER1</div>
         <div class="genre">GENRE</div>
         <div class="billeder">BILLEDER</div>
         <div class="info">INFO</div>
