--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="nav">
         <div class="kalender">KALENDER</div>
         <div class="genre">GENRE</div>
-        <div class="billeder">BILLEDER</div>
+        <div class="billeder">BILLEDER1</div>
         <div class="info">INFO</div>
         <div class="kontakt">KONTAKT</div>
         <div class="sog">SOG</div>
