--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="genre">GENRE</div>
         <div class="billeder">BILLEDER</div>
         <div class="info">INFO</div>
-        <div class="kontakt">KONTAKT</div>
+        <div class="kontakt">KONTAKT2</div>
         <div class="sog">SOG</div>
         <div class="menu_inside">Menu<i class="bi bi-list"></i></div>
       </div>
