--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
       </div>
       <div class="menu">MENU<i class="bi bi-list"></i></div>
       <div class="nav">
-        <div class="kalender">KALENDER1</div>
+        <div class="kalender">KALENDER</div>
         <div class="genre">GENRE</div>
         <div class="billeder">BILLEDER</div>
         <div class="info">INFO</div>
-        <div class="kontakt">KONTAKT2</div>
+        <div class="kontakt">KONTAKT</div>
         <div class="sog">SOG</div>
         <div class="menu_inside">Menu<i class="bi bi-list"></i></div>
       </div>
