--- a/kontakt.html
+++ b/kontakt.html
@@ -86,7 +86,7 @@
         <div class="sog">SOG</div>
         <div class="menu_inside">Menu<i class="bi bi-list"></i></div>
       </div>
-      <div class="kontakt">
+      <div class="kontaktpage">
         <h2>KONTAKT</h2>
         <p><strong>MUSIK LOPPEN</strong></p>
         <p>Sydområdet 4B, 1. sal</p>
@@ -94,40 +94,40 @@
         <p><strong>CVR:</strong> 10303702</p>
         <p><strong>Tel:</strong> (+45) 3257 8422</p>
         <p><strong>Office hours:</strong> Monday to Friday from 10.00-14.00</p>
-        <p><strong>Booking</strong></p>
-        <p>Jasper 'Japser' Jensen / <em>loppen@loppen.dk</em></p>
+        <p class="contactheading">Booking</p>
+        <p class="contactname">Jasper 'Japser' Jensen / <em>loppen@loppen.dk</em></p>
         <p>Please remember to include links to your music and socials.</p>
-        <p><strong>Communication & Administration</strong></p>
-        <p>Michelle Therese Smidt /<em>michelle@loppen.dk</em></p>
-        <p><strong>PR & Marketing</strong></p>
-        <p>Anne Kirstine Knudsen /<em>anne@loppen.dk</em></p>
-        <p><strong>Production</strong></p>
-        <p>Mina Göl Bertelsen /<em>mina@loppen.dk</em></p>
-        <p><strong>Accounting & Finance</strong></p>
-        <p>Jesper Jensen /<em>okonomi@loppen.dk</em></p>
-        <p><strong>Service</strong></p>
-        <p>Ann-Sofie Lundsholm /<em>ann-sofie@loppen.dk</em></p>
-        <p><strong>Bar</strong></p>
-        <p>Theis Thomsen /</p>
-        <p><strong>The music association Loppens board consists of: </strong></p>
-        <p>Helle Elena Andersen, <em>Head of board</em></p>
+        <p class="contactheading">Communication & Administration</p>
+        <p class="contactname">Michelle Therese Smidt /<em>michelle@loppen.dk</em></p>
+        <p class="contactheading">PR & Marketing</p>
+        <p class="contactname">Anne Kirstine Knudsen /<em>anne@loppen.dk</em></p>
+        <p class="contactheading">Production</p>
+        <p class="contactname">Mina Göl Bertelsen /<em>mina@loppen.dk</em></p>
+        <p class="contactheading">Accounting & Finance</p>
+        <p class="contactname">Jesper Jensen /<em>okonomi@loppen.dk</em></p>
+        <p class="contactheading">Service</p>
+        <p class="contactname">Ann-Sofie Lundsholm /<em>ann-sofie@loppen.dk</em></p>
+        <p class="contactheading">Bar</p>
+        <p class="contactname">Theis Thomsen /</p>
+        <p class="contactheading">The music association Loppens board consists of: </p>
+        <p class="contactname">Helle Elena Andersen, <em>Head of board</em></p>
         <p>Former head of secretarie at Spillesteder.dk (now Dansk Live) as well as 10 years as chairman of the patient association and 8 years as audience representative in Copenhagen's Music Committee.</p>
-        <p>Susanne Romlund, <em>Treasurer</em></p>
+        <p class="contactname">Susanne Romlund, <em>Treasurer</em></p>
         <p>Self-employed accountant</p>
-        <p>Janus Larsen, <em>Member of the Board</em></p>
+        <p class="contactname">Janus Larsen, <em>Member of the Board</em></p>
         <p>Soon-to-be accountant</p>
-        <p>Saionara Reis, <em>Member of the Board</em></p>
+        <p class="contactname">Saionara Reis, <em>Member of the Board</em></p>
         <p>Specialist consultant in human rights and sustainable development at the Institute for Human Rights.</p>
-        <p>Pernille Hagen Hess, <em>Member of the Board</em></p>
+        <p class="contactname">Pernille Hagen Hess, <em>Member of the Board</em></p>
         <p>Pedagogue</p>
-        <p>Bjørn Winterskov, <em>Member of the Board</em></p>
+        <p class="contactname">Bjørn Winterskov, <em>Member of the Board</em></p>
         <p>Land surveyor and co-responsible for operations in The Grey Hall / Den Grå Hal.</p>
-        <p>Niels Vagn Brodahl, <em>Member of the Board</em></p>
+        <p class="contactname">Niels Vagn Brodahl, <em>Member of the Board</em></p>
         <p>Designer and performer</p>
         <h3>Social Media</h3>
         <p><strong>Facebook: </strong><a href="http://www.facebook.com/musikloppen">www.facebook.com/musikloppen</a></p>
         <p><strong>Instagram: </strong><a href="http://www.instagram.com/musikloppen">www.instagram.com/musikloppen</a></p>
-        <p><strong>Loppen er støttet af Statens Kunstfond og Københavns Kommune Kultur- og Fritidsudvalg.</strong></p>
+        <p class="contactheading">Loppen er støttet af Statens Kunstfond og Københavns Kommune Kultur- og Fritidsudvalg.</p>
 
 
       </div>
