--- a/index.html
+++ b/index.html
@@ -135,6 +135,17 @@
           </div>
         </div>
       </div>
+
+      <div id="loppensearchbar" class="searchbar">
+        <span class="closebtn" onclick="closeSearch()" title="Luk">×</span>
+        <div class="searchbar-open">
+          <form action="toTheSearchGnomes">
+            <input type="text" name="search">
+            <button type="submit">SØG</button>
+          </form>
+        </div>
+      </div>
+
       <div class="menu">MENU<i class="bi bi-list"></i></div>
       <div class="nav">
         <div class="kalender">KALENDER</div>
@@ -142,7 +153,7 @@
         <div class="billeder">BILLEDER</div>
         <div class="info">INFO</div>
         <div class="kontakt"><a href="kontakt.html">KONTAKT</a></div>
-        <div class="sog">SOG</div>
+        <div class="sog"><button class="searchbtn" onclick="openSearch()">SØG</button></div>
         <div class="menu_inside">Menu<i class="bi bi-list"></i></div>
       </div>
 
@@ -184,5 +195,7 @@
         </div>
       </div>
     </div>
+
+    <script src="javascript.js"></script> 
   </body>
 </html>
