not perfect .. at least a start. I forgot to merge from java branch

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <style>
       
       @media screen and (max-width: 375px) {
-        div.menu_inside {
+        .menu_inside {
           display: none;
         }
         .nav {
@@ -151,7 +151,7 @@
         <div class="kalender">KALENDER</div>
         <div class="genre">GENRE</div>
         <div class="billeder">BILLEDER</div>
-        <div class="info">INFO</div>
+        <div class="info"><a href="info.html">INFO</a></div>
         <div class="kontakt"><a href="kontakt.html">KONTAKT</a></div>
         <div class="sog"><button class="searchbtn" onclick="openSearch()">SØG</button></div>
         <div class="menu_inside">Menu<i class="bi bi-list"></i></div>
