--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           display: flex;
         }
         .nav {
-          display: none;
+          display: flex;
           flex-direction: row;
-          max-height: 100%;
+          /* max-height:0; */
         }
         .menu {
           display: none;
