wow after many hours, only 4 letters are needed to fix the problem

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           display: none;
         }
         .nav {
-          display: none;
+          display: none flex;
           flex-direction: column;
           max-height: 0;
         }
