restyled the band part

--- a/index.html
+++ b/index.html
@@ -157,31 +157,74 @@
         <div class="menu_inside">Menu<i class="bi bi-list"></i></div>
       </div>
 
-      <div class="section">
-        <div class="subsection_left">
-          <h3>Date 01-01-01</h3>
-          <h1>Headliner</h1>
-          <h2>Supporting act</h2>
-        </div>
-        <div class="subsection_right">
-          <p>More info</p>
-          <br /><br />
-          <p>Buy now</p>
-        </div>
-      </div>
+      <div class="shows">
 
-      <div class="section1">
-        <div class="subsection_left">
-          <h3>Date 01-01-01</h3>
-          <h1>Headliner</h1>
-          <h2>Supporting act</h2>
-        </div>
-        <div class="subsection_right">
-          <p>More info</p>
-          <br /><br />
-          <p>Buy now</p>
-        </div>
+            <div class="band">
+              <div class="subsection_top">
+                <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
+                <div class="sale">forsalg: 180kr &#9654; køb</div>
+              </div>
+              <div class="subsection_bottom">
+                <h2 class="headliner">bodega <span class="countrycode">(us)</span></h2>
+                <p class="supporting">the klittens <span class="countrycode">(nl)</span></p>
+              </div>
+            </div>
+
+            <div class="band">
+                <div class="subsection_top">
+                  <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
+                  <div class="sale">forsalg: 180kr &#9654; køb</div>
+                </div>
+                <div class="subsection_bottom">
+                  <h2 class="headliner">unida <span class="countrycode">(us)</span></h2>
+                  <p class="supporting">bürner <span class="countrycode">(se)</span></p>
+                </div>
+              </div>
+
+              <div class="band">
+                <div class="subsection_top">
+                  <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
+                  <div class="sale">forsalg: 180kr &#9654; køb</div>
+                </div>
+                <div class="subsection_bottom">
+                  <h2 class="headliner">den syvende søn <span class="countrycode"></span></h2>
+                </div>
+              </div>
+
+              <div class="band">
+                <div class="subsection_top">
+                  <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
+                  <div class="sale">forsalg: 180kr &#9654; køb</div>
+                </div>
+                <div class="subsection_bottom">
+                  <h2 class="headliner">filuka <span class="countrycode"></span></h2>
+                  <p class="supporting">prosa <span class="countrycode"></span></p>
+                </div>
+              </div>
+
+              <div class="band">
+                <div class="subsection_top">
+                  <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
+                  <div class="sale">forsalg: 180kr &#9654; køb</div>
+                </div>
+                <div class="subsection_bottom">
+                  <h2 class="headliner">j. bernardt <span class="countrycode">(be)</span></h2>
+                </div>
+              </div>
+
+              <div class="band">
+                <div class="subsection_top">
+                  <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
+                  <div class="sale">forsalg: 180kr &#9654; køb</div>
+                </div>
+                <div class="subsection_bottom">
+                  <h2 class="headliner">jenny don't and the spurs <span class="countrycode">(us)</span></h2>
+                </div>
+              </div>
       </div>
+      
+
+     
 
       <div class="footer">
         <div class="socialmedia">
