forgot for the next query

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         }
       }
       @media screen and (min-width: 376px) {
+        body {
+          margin:10px;
+        }
         .menu_inside {
           display: flex;
         }
