--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           display: none;
         }
         .nav {
-          display: none flex;
+          display: flex;
           /* flex-direction: column; */
           max-height: 0;
           overflow: hidden;
