--- a/info.html
+++ b/info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="da">
   <head>
     <title>Info</title>
     <meta charset="UTF-8" />
@@ -338,6 +338,6 @@
             <a href="https://dansklive.dk/">Dansk Live</a>
           </div>
         </div>
-    
+        <script src="javascript.js"></script>
   </body>
 </html>
