--- a/info.html
+++ b/info.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="da">
   <head>
-    <title>Info</title>
+    <title>Info | LOPPEN</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/assets/loppelogonew.svg">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
