added hover in other menu items (desktop version)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="da">
   <head>
     <title>Loppen.dk</title>
@@ -170,10 +170,46 @@
             </div>
           </div>
 
+          <div class="dropdown1">
+            <button class="dropbtn1">GENRE</button>
+            <div class="dropdown-content1">
+              <a href="#">OKTOBER</a>
+              <a href="#">NOVEMBER</a>
+              <a href="#">DECEMBER</a>
+            </div>
+          </div>
+
+          <div class="dropdown2">
+            <button class="dropbtn2">BILLEDER</button>
+            <div class="dropdown-content2">
+              <a href="#">OKTOBER</a>
+              <a href="#">NOVEMBER</a>
+              <a href="#">DECEMBER</a>
+            </div>
+          </div>
+
+          <div class="dropdown3">
+            <button class="dropbtn3">INFO</button>
+            <div class="dropdown-content3">
+              <a href="#">OKTOBER</a>
+              <a href="#">NOVEMBER</a>
+              <a href="#">DECEMBER</a>
+            </div>
+          </div>
+
+          <div class="dropdown4">
+            <button class="dropbtn4">KONTAKT</button>
+            <div class="dropdown-content4">
+              <a href="#">OKTOBER</a>
+              <a href="#">NOVEMBER</a>
+              <a href="#">DECEMBER</a>
+            </div>
+          </div>
+          <!-- 
           <div class="genre"><a href="#">GENRE</a></div>
           <div class="billeder"><a href="#">BILLEDER</a></div>
           <div class="info"><a href="info.html">INFO</a></div>
-          <div class="kontakt"><a href="kontakt.html">KONTAKT</a></div>
+          <div class="kontakt"><a href="kontakt.html">KONTAKT</a></div> -->
           <div class="sog">
             <button class="searchbtn" onclick="openSearch()">SØG</button>
           </div>
