added link to index on the logo text

--- a/info.html
+++ b/info.html
@@ -140,16 +140,18 @@
             <div class="logoimg" id="loppe">
               <img src="assets/loppelogonew.svg" alt="loppen logo" />
             </div>
-            <a href="index.html">
+          
             <div class="logotext">
+              <a class="logolink" href="index.html">
               <div class="logolopp">
                 <h1>LOPPEN</h1>
               </div>
               <div class="logochris">
                 <p>CHRISTIANIA</p>
               </div>
-            </div>
             </a>
+            </div>
+         
             <div class="bluebox"></div>
           </div>
         </div>
