--- a/kontakt.html
+++ b/kontakt.html
@@ -138,12 +138,14 @@
               <img src="assets/loppelogonew.svg" alt="loppen logo" />
             </div>
             <div class="logotext">
+              <a class="logolink" href="index.html">
               <div class="logolopp">
                 <h1>LOPPEN</h1>
               </div>
               <div class="logochris">
                 <p>CHRISTIANIA</p>
               </div>
+              </a>
             </div>
             <div class="bluebox"></div>
           </div>
