added onclick on desktop.. Working!!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/assets/loppelogonew.svg">
+    <link rel="icon" type="image/x-icon" href="/assets/loppelogonew.svg" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -163,8 +163,8 @@
 
         <div class="nav">
           <div class="dropdown">
-            <button class="dropbtn">KALENDAR</button>
-            <div class="dropdown-content">
+            <button class="dropbtn" onclick="kalendar_open()">KALENDAR</button>
+            <div class="dropdown-content" id="id_dropdown-content">
               <a href="#">OKTOBER</a>
               <a href="#">NOVEMBER</a>
               <a href="#">DECEMBER</a>
@@ -172,8 +172,8 @@
           </div>
 
           <div class="dropdown1">
-            <button class="dropbtn1">GENRE</button>
-            <div class="dropdown-content1">
+            <button class="dropbtn1" onclick="genre_open()">GENRE</button>
+            <div class="dropdown-content1" id="id_dropdown-content1">
               <a href="#">OKTOBER</a>
               <a href="#">NOVEMBER</a>
               <a href="#">DECEMBER</a>
@@ -181,8 +181,8 @@
           </div>
 
           <div class="dropdown2">
-            <button class="dropbtn2">BILLEDER</button>
-            <div class="dropdown-content2">
+            <button class="dropbtn2" onclick="billeder_open()">BILLEDER</button>
+            <div class="dropdown-content" id="id_dropdown-content2">
               <a href="#">OKTOBER</a>
               <a href="#">NOVEMBER</a>
               <a href="#">DECEMBER</a>
@@ -190,8 +190,8 @@
           </div>
 
           <div class="dropdown3">
-            <button class="dropbtn3">INFO</button>
-            <div class="dropdown-content3">
+            <button class="dropbtn" onclick="info_open()">INFO</button>
+            <div class="dropdown-content3" id="id_dropdown-content3">
               <a href="#">OKTOBER</a>
               <a href="#">NOVEMBER</a>
               <a href="#">DECEMBER</a>
@@ -199,13 +199,14 @@
           </div>
 
           <div class="dropdown4">
-            <button class="dropbtn4">KONTAKT</button>
-            <div class="dropdown-content4">
+            <button class="dropbtn4" onclick="kontakt_open()">KALENDAR</button>
+            <div class="dropdown-content4" id="id_dropdown-content4">
               <a href="#">OKTOBER</a>
               <a href="#">NOVEMBER</a>
               <a href="#">DECEMBER</a>
             </div>
           </div>
+
           <!-- 
           <div class="genre"><a href="#">GENRE</a></div>
           <div class="billeder"><a href="#">BILLEDER</a></div>
