--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="band">
           <div class="subsection_top">
             <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
-            <div class="sale">forsalg: 180kr &#9654; køb</div>
+            <div class="sale">forsalg: 180kr køb</div>
           </div>
           <div class="subsection_bottom">
             <h2 class="headliner">
@@ -239,7 +239,7 @@
         <div class="band">
           <div class="subsection_top">
             <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
-            <div class="sale">forsalg: 180kr &#9654; køb</div>
+            <div class="sale">forsalg: 180kr køb</div>
           </div>
           <div class="subsection_bottom">
             <h2 class="headliner">
@@ -254,7 +254,7 @@
         <div class="band">
           <div class="subsection_top">
             <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
-            <div class="sale">forsalg: 180kr &#9654; køb</div>
+            <div class="sale">forsalg: 180kr køb</div>
           </div>
           <div class="subsection_bottom">
             <h2 class="headliner">
@@ -266,7 +266,7 @@
         <div class="band">
           <div class="subsection_top">
             <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
-            <div class="sale">forsalg: 180kr &#9654; køb</div>
+            <div class="sale">forsalg: 180kr køb</div>
           </div>
           <div class="subsection_bottom">
             <h2 class="headliner">filuka <span class="countrycode"></span></h2>
@@ -277,19 +277,17 @@
         <div class="band">
           <div class="subsection_top">
             <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
-            <div class="sale">forsalg: 180kr &#9654; køb</div>
+            <div class="sale">forsalg: 180kr køb</div>
           </div>
           <div class="subsection_bottom">
-            <h2 class="headliner">
-              j. bernardt <span class="countrycode">(be)</span>
-            </h2>
+            <h2 class="headliner">j.bernardt <span class="countrycode">(be)</span></h2>
           </div>
         </div>
 
         <div class="band">
           <div class="subsection_top">
             <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
-            <div class="sale">forsalg: 180kr &#9654; køb</div>
+            <div class="sale">forsalg: 180kr køb</div>
           </div>
           <div class="subsection_bottom">
             <h2 class="headliner">
